--- a/Tavolo/Makefile
+++ b/Tavolo/Makefile
@@ -1,2 +1,8 @@
-prova_cubo: my_main.c
-	gcc my_main.c -o prova_cubo -lglut -lGLU -lGLEW -lGL
+prova_tavolo: my_main.c tavolo.o shader.o
+	gcc my_main.c -o prova_tavolo tavolo.o shader.o -lglut -lGLU -lGLEW -lGL
+
+tavolo.o: tavolo.c
+	gcc -c tavolo.c
+
+shader.o: shader.c
+	gcc -c shader.c
